--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,6 +36,7 @@ nav img{
 .font-weight-extrabold{
     font-weight: bolder
 }
+
 .apresentacao p{
     color: white;
     font-size: 2.2rem;
@@ -75,6 +76,165 @@ nav img{
 
 .play{
     width: 600px;
-    height: 400px;
+    height: 300px;
     background-color: #FF4040;
+}
+
+/* ------------------- QUIZ ---------------- */
+#test { 
+    border:#000 1px solid; 
+    padding:10px 40px 40px 40px; 
+    width: 400px;
+}
+
+#quiz {
+    width: 600px;
+    height: 500px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 10px 50px 50px 50px;
+    border-radius: 5px;
+    border: 2px solid #cbcbcb;
+    margin-top: 30px;
+    background-image: url('../img/fundo1.png');
+}
+
+.titulo-quiz {
+    font-family: "sans-serif";
+    background-color: #DC3545;
+    font-size: 50px;
+    text-align: center;
+    color: #ffffff;
+    padding: 2px 0px;
+    border-radius: 50px;
+    margin-top: 20px;
+    border: 1px solid #5A6772;
+}
+
+.pergunta-quiz {
+    font-family: "monospace";
+    font-size: 30px;
+    color: black;
+    margin-top: 30px;
+    height: 130px;
+}
+
+#btn-left {
+    float: left;
+    margin-left: 50px;
+}
+
+#btn-right {
+    float: right;
+    margin-right: 50px;
+}
+
+#btn-left, #btn-right, .btn-hemosc, #btn-cadastrar {
+    background-color: #DC3545;
+    width: 90px;
+    font-size: 20px;
+    color: #fff;
+    border: 1px solid #5A6772;
+    border-radius: 50px;
+    padding: 10px 10px;
+    display: block;
+
+}
+
+#btn-left:hover, #btn-right:hover {
+    cursor: pointer;
+    background-color: rgb(119, 35, 44);
+ 
+}
+
+#btn-left:focus, #btn-right:focus {
+    outline: 0;
+}
+
+.btn-hemosc:hover {
+    text-decoration: none;
+    cursor: pointer;
+    background-color: rgb(119, 35, 44);
+}
+
+.btn-hemosc:visited{
+    color: white;
+    margin-bottom: 100px;
+}
+.btn-hemosc{
+    margin-bottom: 20px;
+}
+
+/* ------------------- PASSOS DOACAO ---------------- */
+
+#passos-doacao {
+    height: 800px;
+    background-color: #30394b;
+    border: solid 1px white;
+
+}
+
+#passos-doacao h1 {
+    text-align: center;
+    color: white;
+    font-weight: 300;
+    font-size: 3.5rem;
+}
+
+.faixa {
+    height: 6px;
+    width: 140px;
+    margin: auto;
+    background-color: #FF4040;
+    margin-bottom: 30px;
+}
+
+#cards {
+    margin: auto;
+    width: 1160px;
+    text-align: center;
+}
+
+#card-1, #card-2, #card-3 {
+    background-color: white;
+    border-radius: 10px;
+    float: left;
+}
+
+#card-1, #card-3 {
+    width: 350px;
+    height: 450px;
+    margin-top: 45px;
+    font-size: 2rem;
+    padding: 25px;
+}
+
+#card-2 {
+    width: 400px;
+    height: 540px;
+    margin: 0 30px;
+    font-size: 2.3rem;
+    padding: 25px;
+}
+
+#passos-doacao img {
+    margin: auto;
+    display: block;
+}
+
+#card-1 img {
+    width: 180px;
+    margin-top: 40px;
+}
+
+#card-2 img {
+    width: 220px;
+}
+
+#card-2>p {
+    margin-bottom: 0;
+}
+
+#card-3 img {
+    width: 150px;
 }
