--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,9 @@
     font-family:GothamLight;
     src: url(../font/GothamLight.ttf);
 }
+*{
+    border: solid black 1px
+}
 
 
 body {
@@ -65,16 +68,53 @@ nav img{
 }
 .video{
     height: 400px;
-    background-color: #30394b;
+    background-color: #30394b; 
 }
 .video>div{
     width: 80%;
     background-color: white;
     margin: auto;
 }
+.central{
+    display: block;
+    
+    width: 500px;
+    border: solid black 1px;
+    margin: auto;
+    border-radius: 11px
+}
+.central2 {
+    
+    height: 380px;
+    background-color: white;
+    border-radius: 10px;
+   
+}
 
+.video-conteudo {
+    /*display: block;*/
+    width: 356px;
+    float: left;
+    margin-top: 84px;
+    margin-left: 45px;
+    border-radius: 10px;
+}
+.video-conteudo h1{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 2.6rem
+}
+.video-conteudo p{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 1.4rem
+}
 .play{
     width: 600px;
     height: 400px;
     background-color: #FF4040;
+    float: left;
+    border-radius: 10px;
+    margin-top: -50px;
+    margin-left: -50px
 }
