--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,18 +3,13 @@
     src: url(../font/GothamLight.ttf);
 }
 
-
-body {
-    background-color: #FF4040;
-}
-
 nav {
     padding-top: 20px;
     padding-right: 40px;
 
 }
 nav img{
-    width: 400px;
+    width: 100px;
     float: left;
     margin-left: 40px;
 }
@@ -44,7 +39,8 @@ nav img{
     float: right;
     text-align: right;
     padding-top: 70px;
-    font-family: GothamLight
+    font-family: GothamLight;
+    background-color: #FF4040;
 }
 
 .apresentacao img{
@@ -75,7 +71,7 @@ nav img{
 }
 
 .play{
-    width: 600px;
+    width: 100px;
     height: 300px;
     background-color: #FF4040;
 }
@@ -171,6 +167,7 @@ nav img{
     height: 800px;
     background-color: #30394b;
     border: solid 1px white;
+    width: 100%;
 
 }
 
@@ -238,3 +235,42 @@ nav img{
 #card-3 img {
     width: 150px;
 }
+
+@media screen and (max-width: 1200px){
+#card-1, #card-2, #card-3 {
+    background-color: white;
+    border-radius: 10px;
+    width: 580px;
+    height: 390px;
+} 
+
+#cards {
+    width: 580px;
+}
+#card-2 {
+    margin: 45px 0 0 0;
+    font-size: 2rem;
+} 
+#card-2 img {
+    width: 180px;
+    margin-top: 10px;
+}
+
+#passos-doacao {
+    height: 1460px;
+}
+
+@media screen and (max-width: 600px){
+#card-1, #card-2, #card-3 {   
+    width: 300px;
+    height: 510px;
+}
+#cards {
+    width: 300px;
+}
+#passos-doacao {
+    height: 1880px;
+}
+}
+
+/* ------------------- fim ---------------- */
