--- a/css/estilo.css
+++ b/css/estilo.css
@@ -78,3 +78,467 @@ nav img{
     height: 400px;
     background-color: #FF4040;
 }
+#parte-quiz{
+    height: 100%;
+    clear: both;
+    background-color: white;
+}
+#meio{
+    height: 600px;
+    padding: 2% 0% 0% 0%;
+}
+#azul{
+    width: 77%;
+    margin: 5% 10% 13% 9%;
+    display: block;
+    background-color: #30394b;
+    color: white;
+    height: 65%;
+    border-radius: 10px;
+    border: 1px solid #30394b;
+}
+#esquerda{
+    display: block;
+    float: left;
+    width: 35%;
+}
+.texto{
+    width: 320px;
+    margin: 0px 0px 0px 60px;
+    text-align: right;
+}
+#primeiro{
+    margin-top: 80px;
+}
+#linha{
+    width: 100px;
+    background-color: #FF4040;
+    height: 5px;
+    margin: 15px 0px 15px 280px
+}
+#quiz{
+    width: 65%;
+    background-color: #FF4040;
+    display: block;
+    height: 380px;
+    margin-left: 200px;
+    border-radius: 10px;
+    margin: 40px 0px 0px 430px;
+}
+
+#esquerda h1{
+    font-size: 2.8rem;
+    font-weight: normal
+}
+
+#esquerda p{
+    font-size: 1.5rem;
+    font-weight: lighter
+}
+
+#baixo{
+    color: white;
+    text-decoration-line: none;
+    padding: 1% 0%;
+    height: 80px;
+    background-color: #FF4040
+}
+#baixo p{
+    display: block;
+    float: left;
+    overflow: hidden;
+    font-size: 2.3rem;
+    margin-left: 9%;
+    font-weight: normal;
+}
+#baixo a{
+    display: block;
+    float: right;
+    overflow: hidden;
+    background-color: #30394b;
+    margin-right: 110px;
+    padding: 2px 70px;
+    font-size: 2.3rem;
+    color: white;
+    border-radius: 10px;
+    margin-right: 9%;
+}
+#baixo a:hover{
+    background-color: #191d25;; 
+    font-size: 2.5rem;
+    margin-right: 8%;
+    text-decoration-line: none
+}
+@media screen and (max-width: 1065px){
+
+#azul{
+    margin-left: 5%;
+}
+#baixo a{
+    margin-right: 50px;
+    padding: 1px 50px;
+    font-size: 1.8rem;
+}
+#baixo p{
+    margin-left: 9%;
+    font-size: 1.8rem;
+}
+#baixo a:hover{
+    display: block;
+    float: right;
+    overflow: hidden;
+    background-color: #30394b;
+    margin-right: 110px;
+    padding: 2px 70px;
+    font-size: 2.3rem;
+    color: white;
+    border-radius: 10px;
+    margin-right: 30%
+}
+}
+@media screen and (max-width: 1035px){
+    #azul{
+        width: 70%;
+        margin: 5% 10% 13% 9%;
+        height: 60%;
+    }
+    #quiz{
+        width: 75%;
+        height: 100%;
+        margin-left: 200px;
+        margin: 40px 0px 0px 300px;
+    }
+    #esquerda h1{
+        font-size: 1.8rem;
+    }
+    
+    #esquerda p{
+        font-size: 1.2rem;
+    }
+    .texto{
+        width: 230px;
+        margin: 0px 0px 0px 40px;
+        text-align: right;
+    }
+    #linha{
+        margin: 15px 0px 15px 170px
+    }
+    #baixo a{
+        margin-right: 90px;
+    }
+}
+@media screen and (max-width: 840px){
+    #meio{
+        height: 500px;
+    }
+    #azul{
+        width: 65%;
+        margin: 5% 10% 0% 9%;
+        height: 58%;
+    }
+    #quiz{
+        width: 75%;
+        height: 100%;
+        margin-left: 200px;
+        margin: 40px 0px 0px 280px;
+    }
+    #primeiro{
+        margin-top: 55px;
+    }
+    #esquerda h1{
+        font-size: 1.8rem;
+    }
+    #esquerda p{
+        font-size: 1.2rem;
+    }
+    .texto{
+        width: 220px;
+        margin: 0px 0px 0px 40px;
+        text-align: right;
+    }
+    #linha{
+        margin: 15px 0px 15px 160px
+    }
+    #baixo a{
+        margin-right: 70px;
+        font-size: 1.5rem;
+        margin-top: 0.5%;
+        padding-bottom: 0.5%
+    }
+    #baixo p{
+        font-size: 1.5rem;
+        margin-top: 0.5%;
+        padding-bottom: 0.5%
+    }
+}
+@media screen and (max-width: 713px){
+    #meio{
+        height: 450px;
+    }
+    #azul{
+        margin: 5% 10% 0% 7%;
+    }
+    #quiz{
+        margin-left: 200px;
+        margin: 40px 0px 0px 270px;
+    }
+    #primeiro{
+        margin-top: 45px;
+    }
+    #esquerda h1{
+        font-size: 1.7rem;
+    }
+    #esquerda p{
+        font-size: 1.1rem;
+    }
+    .texto{
+        width: 220px;
+        margin: 0px 0px 0px 20px;
+    }
+    #linha{
+        margin: 15px 0px 15px 170px;
+        width: 70px;
+    }
+    #baixo{
+        height: 25px;
+    }
+    #baixo a{
+        margin-right: 50px;
+        font-size: 1.3rem;
+        margin-top: 0.5%;
+        padding-bottom: 0.5%;
+    }
+    #baixo p{
+        font-size: 1.3rem;
+        margin-left: 50px;
+    }
+}
+@media screen and (max-width: 651px){
+
+    #meio{
+        height: 800px;
+    }
+    #azul{
+        width: 83%;
+        margin: 5% 9% 13% 9%;
+        height: 90%;
+    }
+    #esquerda{
+        float: left;
+        width: 100%;
+        padding-left: 50px;
+    }
+    .texto{
+        width: 320px;
+        margin: 0px 0px 0px 60px;
+        text-align: center;
+    }
+    #primeiro{
+        margin-top: 35px;
+    }
+    #linha{
+        width: 130px;
+        height: 7px;
+        margin: 15px 0px 15px 152px;
+    }
+    #quiz{
+        width: 85%;
+        height: 51.5%;
+        margin: 300px 40px 0px 40px;
+    }
+    #esquerda h1{
+        font-size: 2.8rem;
+    }
+    #esquerda p{
+        font-size: 1.7rem;
+    }
+    #baixo{
+        padding: 1% 0%;
+        height: 80px;
+    }
+    #baixo p{
+        font-size: 2.5rem;
+        margin-left: 9%;
+        clear: both;
+        float: none;
+        text-align: center;
+        margin: 0%
+    }
+    #baixo a{
+        clear: both;
+        float: none;
+        width: 65%;
+        margin: 0px 100px 30px 110px;
+        text-align: center;
+        padding: 2px 0px 10px 0px;
+        font-size: 2.3rem;
+        font-weight: bolder
+    }
+    #baixo a:hover{
+        clear: both;
+        float: none;
+        width: 65%;
+        margin: 0px 100px 30px 110px;
+        text-align: center;
+        padding: 2px 0px 10px 0px;
+        font-size: 2.3rem;
+        font-weight: bolder
+    }
+}
+@media screen and (max-width: 551px){
+    .texto{
+        width: 320px;
+        margin: 0px 0px 0px 20px;
+        text-align: center;
+    }
+    #linha{
+        width: 130px;
+        height: 7px;
+        margin: 15px 0px 15px 115px;
+    }
+    #baixo p{
+        font-size: 2.2rem;
+    }
+    #baixo a{
+        font-size: 2rem;
+    }
+    #baixo a:hover{
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 480px){
+
+    #meio{
+        height: 700px;
+    }
+    #azul{
+        height: 90%;
+        padding: 0% 5% 15% 0%
+    }
+    #esquerda{
+        padding-left: 0px;
+    }
+    .texto{
+        width: 320px;
+        margin: 0px 0px 0px 40px;
+    }
+    #linha{
+        width: 130px;
+        height: 7px;
+        margin: 15px 0px 15px 135px;
+    }
+    #quiz{
+        width: 90%;
+        height: 60%;
+        margin: 260px 40px 0px 31.5px;
+    }
+    #esquerda h1{
+        font-size: 2.4rem;
+    }
+    #esquerda p{
+        font-size: 1.5rem;
+    }
+    #baixo p{
+        font-size: 2rem;
+        margin-left: 0%;
+    }
+    #baixo a{
+        margin: 0px 100px 30px 85px;
+        font-size: 2rem;
+    }
+    #baixo a:hover{
+        margin: 0px 100px 30px 110px;
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 435px){
+    .texto{
+        width: 320px;
+        margin: 0px 0px 0px 18px;
+    }
+    #linha{
+        width: 110px;
+        height: 7px;
+        margin: 15px 0px 15px 123px;
+    }
+    #baixo p{
+        font-size: 1.8rem;
+        margin-left: 0%;
+    }
+    #baixo a{
+        margin: 0px 100px 30px 85px;
+        font-size: 1.8rem;
+    }
+    #baixo a:hover{
+        margin: 0px 100px 30px 110px;
+        font-size: 1.8rem;
+    }
+    #baixo{
+        height: 110px;
+    }
+}
+@media screen and (max-width: 392px){
+    #meio{
+        height: 550px;
+    }
+    #azul{
+        margin: 5% 9% 13% 9%;
+    }
+    #esquerda{
+        padding-left: 0px;
+    }
+    .texto{
+        margin: 0px 0px 0px 0px;
+    }
+    #primeiro{
+        margin-top: 25px;
+    }
+    #linha{
+        width: 110px;
+        height: 7px;
+        margin: 15px 0px 15px 105px;
+    }
+    #quiz{
+        width: 85%;
+        height: 53%;
+        margin: 230px 40px 0px 32px;
+    }
+    #esquerda h1{
+        font-size: 2rem;
+    }
+    #esquerda p{
+        font-size: 1.5rem;
+    }
+    #baixo p{
+        font-size: 1.6rem;
+        margin-left: 0%;
+    }
+    #baixo a{
+        margin: 0px 100px 30px 70px;
+        font-size: 1.6rem;
+    }
+    #baixo a:hover{
+        margin: 0px 100px 30px 70px;
+        font-size: 1.6rem;
+    }
+}
+@media screen and (max-width: 392px){
+    .texto{
+        margin: 0px 0px 0px 0px;
+        width: 295px;
+    }
+    #linha{
+        width: 100px;
+        height: 6px;
+        margin: 15px 0px 15px 97px;
+    }
+    #baixo p{
+        font-size: 1.5rem;
+    }
+    #baixo a{
+        font-size: 1.5rem;
+    }
+    #baixo a:hover{
+        font-size: 1.5rem;
+    }
+}
