--- a/css/estilo.css
+++ b/css/estilo.css
@@ -138,73 +138,81 @@ iframe{
 /*CÓDIGO DO DESIGN RESPONSIVO DO VÍDEO*/
 
 @media screen and (max-width: 1192px) {
-    body {
-        background-color: #FF4040;
-    }
+body {
+    background-color: #FF4040;
+}
     
-    nav {
-        padding-top: 20px;
-        padding-right: 40px;
+nav {
+    padding-top: 20px;
+    padding-right: 40px;
     
-    }
-    nav img{
+}
+
+nav img{
         width: 200px;
         float: left;
         margin-left: 40px;
-    }
+}
+
     .nav-link{
         font-size: 1.2rem;
         color: white;
         
-    }
+}
     
-    .nav {
-        padding-top: 20px;
-    }
+.nav {
+    padding-top: 20px;
+}
     
-    .nav-link:hover{
-        background-color: #9b1111;
-        color:white;
-        border-radius: 10px;
-    }
-    .font-weight-extrabold{
-        font-weight: bolder
-    }
-    .apresentacao p{
-        color: white;
-        font-size: 2rem;
-        display: block;
-        float: right;
-        text-align: right;
-        padding-top: 70px;
-        font-family: GothamLight;
-        
-    }
-    
-    .apresentacao img{
-        width: 355px;
-    }
-    .onda{
-        background-image: url(../img/onda.png);
-        height: 315px;
-        background-size: 100%;
-        background-repeat: no-repeat;
-        margin-top: -240px;
-    }
-    
-    .apresentacao-conteudo {
-        padding-right: 50px;
-        
-    }
-    .apresentacao-conteudo img{
-        margin: 65px 0 0 50px;
-    }
+.nav-link:hover{
+    background-color: #9b1111;
+    color:white;
+    border-radius: 10px;
+}
+
+.font-weight-extrabold{
+    font-weight: bolder
+}
+
+.apresentacao p{
+    color: white;
+    font-size: 2rem;
+    display: block;
+    float: right;
+    text-align: right;
+    padding-top: 70px;
+    font-family: GothamLight;
+
+}
+
+.apresentacao img{
+    width: 355px;
+}
+
+.onda{
+    background-image: url(../img/onda.png);
+    height: 315px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: -240px;
+}
+ 
+.apresentacao-conteudo {
+    padding-right: 50px;    
+
+}
+
+.apresentacao-conteudo img{
+    margin: 65px 0 0 50px;
+}
+
 .video{
     height: 800px;
     background-color: #30394B; 
     clear: both;
-    padding-top: 15px
+    padding-top: 60px
 }
+
 .apresentacao{
     clear: both;
 }
@@ -235,7 +243,7 @@ iframe{
     width: 356px;
     float: left;
     margin-top: 17px;
-    margin-left: 133px;
+    margin-left: 29%;
     border-radius: 10px;
     clear: both;
     overflow: hidden
@@ -254,7 +262,6 @@ iframe{
     font-size: 1.4rem;
     font-weight: bold;
     text-align: center;
-    
 }
 
 .play1{
@@ -265,9 +272,8 @@ iframe{
     border-radius: 10px;
     display: block;
     clear: both 
-    
-    
 }
+
 iframe{
     width: 100%;
     height: 100%;
@@ -276,6 +282,7 @@ iframe{
     border-radius: 10px;
     margin: auto
 }
+
 .play{
     display: none;
 }
@@ -288,4 +295,152 @@ iframe{
     margin-left: 119px;
 }
 
+}
+
+@media screen and (max-width: 712px){
+.video-conteudo {
+    /*display: block;*/
+    width: 100%;
+    float: left;
+    margin-top: 17px;
+    margin-left: 0px;
+    border-radius: 10px;
+    clear: both;
+    overflow: hidden
+}
+
+.video-conteudo h1{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 2.6rem;
+    text-align: center;
+}
+    
+.video-conteudo p{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-align: center;        
+}
+    
+.play1{
+    width: 85%;
+    height: 53%;
+    background-color: #FF4040;
+    margin: auto;
+    border-radius: 10px;
+    display: block;
+    clear: both         
+}
+
+iframe{
+    width: 100%;
+    height: 100%;
+    display: block;
+    border: black solid 3px;
+    border-radius: 10px;
+    margin: auto
+}
+
+.play{
+    display: none;
+}
+    
+.sublinhado{
+    border-top: #FF4040 solid 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 112px;
+    margin-left: 119px;
+}
+    
+}
+
+@media screen and (max-width: 377px){
+.video{
+    height: 400px;
+    background-color: #30394b; 
+    width: 105%;
+}
+
+.video>div{
+    width: 80%;
+    height: 88%;
+    background-color: white;
+    margin: auto;
+}
+
+.central{
+    display: block;
+    width: 88%;
+    height: 90%;
+    border: solid black 1px;
+    margin: auto;
+    border-radius: 11px;
+}
+
+.central2 {
+    height: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.video-conteudo {
+    /*display: block;*/
+    width: 100%;
+    height: 58%;
+    float: left;
+    margin-top: 9px;
+    margin-left: 0px;
+    border-radius: 10px;
+    clear: both;
+    overflow: hidden
+}
+
+.video-conteudo h1{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 1.6rem;
+    text-align: center;
+}
+    
+.video-conteudo p{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;       
+}
+    
+.play1{
+    width: 62%;
+    height: 35%;
+    background-color: #FF4040;
+    margin: auto;
+    border-radius: 10px;
+    display: block;
+    clear: both;  
+}
+
+iframe{
+    width: 100%;
+    height: 100%;
+    display: block;
+    border: black solid 3px;
+    border-radius: 10px;
+    margin: auto
+}
+
+.play{
+    display: none;
+}
+
+.sublinhado{
+    border-top: #FF4040 solid 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 112px;
+    margin-left: 119px;
+}    
 }
