--- a/css/estilo.css
+++ b/css/estilo.css
@@ -143,10 +143,67 @@ nav img{
     margin: auto;
 }
 
+.central{
+    display: block;
+    
+    width: 500px;
+    border: solid black 1px;
+    margin: auto;
+    border-radius: 11px;
+}
+.central2 {
+    
+    height: 380px;
+    background-color: white;
+    border-radius: 10px;
+   
+}
+
+.video-conteudo {
+    width: 356px;
+    float: left;
+    margin-top: 84px;
+    margin-left: 45px;
+    border-radius: 10px;
+}
+.video-conteudo h1{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 2.6rem
+}
+.video-conteudo p{
+    font-family:GothamLight;
+    src: url(../font/Gotham-Bold.otf);
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
 .play{
     width: 600px;
     height: 400px;
     background-color: #FF4040;
+    float: left;
+    border-radius: 10px;
+    margin-top: -50px;
+    margin-left: -50px;
+}
+
+.play1{
+    display: none;
+}
+
+.sublinhado{
+    border-top: #FF4040 solid 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 238px;
+}
+iframe{
+    width: 600px;
+    height: 400px;
+    display: block;
+    border: #FF4040 solid 3px;
+    border-radius: 10px;
 }
 
 /* rodapé */
@@ -270,6 +327,148 @@ footer small{
 
 }
 
+@media screen and (max-width: 1192px) {
+    .video{
+        height: 800px;
+        background-color: #30394B; 
+        clear: both;
+        padding-top: 60px
+    }
+    .video>div{
+        width: 80%;
+        height: 72%;
+        background-color: white;
+        margin: auto;
+    }
+    .central{
+        display: block;
+        width: 500px;
+        border: solid black 1px;
+        margin: auto;
+        border-radius: 11px;
+    }
+    
+    .central2 {
+        height: 565px;
+        background-color: white;
+        border-radius: 10px;
+    }
+    
+    .video-conteudo {
+        width: 356px;
+        float: left;
+        margin-top: 17px;
+        margin-left: 29%;
+        border-radius: 10px;
+        clear: both;
+        overflow: hidden
+    }
+    
+    .video-conteudo h1{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 2.6rem;
+        text-align: center;
+    }
+    
+    .video-conteudo p{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 1.4rem;
+        font-weight: bold;
+        text-align: center;
+    }
+    
+    .play1{
+        width: 500px;
+        height: 300px;
+        background-color: #FF4040;
+        margin: auto;
+        border-radius: 10px;
+        display: block;
+        clear: both 
+    }
+    
+    iframe{
+        width: 100%;
+        height: 100%;
+        display: block;
+        border: #FF4040 solid 3px;
+        border-radius: 10px;
+        margin: auto
+    }
+    
+    .play{
+        display: none;
+    }
+    
+    .sublinhado{
+        border-top: #FF4040 solid 6px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 112px;
+        margin-left: 119px;
+    }
+}
+
+@media screen and (max-width: 712px){
+    .video-conteudo {
+        width: 100%;
+        float: left;
+        margin-top: 17px;
+        margin-left: 0px;
+        border-radius: 10px;
+        clear: both;
+        overflow: hidden
+    }
+    
+    .video-conteudo h1{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 2.6rem;
+        text-align: center;
+    }
+        
+    .video-conteudo p{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 1.4rem;
+        font-weight: bold;
+        text-align: center;        
+    }
+        
+    .play1{
+        width: 85%;
+        height: 53%;
+        background-color: #FF4040;
+        margin: auto;
+        border-radius: 10px;
+        display: block;
+        clear: both         
+    }
+    
+    iframe{
+        width: 100%;
+        height: 100%;
+        display: block;
+        border: #FF4040 solid 3px;
+        border-radius: 10px;
+        margin: auto
+    }
+    
+    .play{
+        display: none;
+    }
+        
+    .sublinhado{
+        border-top: #FF4040 solid 6px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 112px;
+        margin-left: 119px;
+    }
+}
+
 @media screen and (max-width:600px){
 
     nav img {
@@ -336,6 +535,95 @@ footer small{
     .botao a{
         width: 70px;
         height: 70px;
+    }
+
+}
+
+@media screen and (max-width: 377px){
+
+    .video{
+        height: 400px;
+        background-color: #30394b; 
+        width: 105%;
+    }
+    
+    .video>div{
+        width: 80%;
+        height: 88%;
+        background-color: white;
+        margin: auto;
+    }
+    
+    .central{
+        display: block;
+        width: 88%;
+        height: 90%;
+        border: solid black 1px;
+        margin: auto;
+        border-radius: 11px;
+    }
+    
+    .central2 {
+        height: 100%;
+        background-color: white;
+        border-radius: 10px;
+    }
+    
+    .video-conteudo {
+        width: 100%;
+        height: 58%;
+        float: left;
+        margin-top: 9px;
+        margin-left: 0px;
+        border-radius: 10px;
+        clear: both;
+        overflow: hidden
+    }
+    
+    .video-conteudo h1{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 1.6rem;
+        text-align: center;
+    }
+        
+    .video-conteudo p{
+        font-family:GothamLight;
+        src: url(../font/Gotham-Bold.otf);
+        font-size: 1rem;
+        font-weight: bold;
+        text-align: center;       
+    }
+        
+    .play1{
+        width: 62%;
+        height: 35%;
+        background-color: #FF4040;
+        margin: auto;
+        border-radius: 10px;
+        display: block;
+        clear: both;  
+    }
+    
+    iframe{
+        width: 100%;
+        height: 100%;
+        display: block;
+        border: #FF4040 solid 3px;
+        border-radius: 10px;
+        margin: auto
+    }
+    
+    .play{
+        display: none;
+    }
+    
+    .sublinhado{
+        border-top: #FF4040 solid 6px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 112px;
+        margin-left: 119px;
     }
 
 }
