--- a/css/estilo.css
+++ b/css/estilo.css
@@ -298,6 +298,81 @@ iframe{
     text-decoration-line: none
 }
 
+/* ------------------- PASSOS DOACAO ---------------- */
+
+#passos-doacao {
+    height: 800px;
+    background-color: #30394b;
+    border: solid 1px white;
+    width: 100%;
+    clear: both;
+}
+
+#passos-doacao h1 {
+    text-align: center;
+    color: white;
+    font-weight: 300;
+    font-size: 3.5rem;
+}
+
+.faixa {
+    height: 6px;
+    width: 140px;
+    margin: auto;
+    background-color: #FF4040;
+    margin-bottom: 30px;
+}
+
+#cards {
+    margin: auto;
+    width: 1160px;
+    text-align: center;
+}
+
+#card-1, #card-2, #card-3 {
+    background-color: white;
+    border-radius: 10px;
+    float: left;
+}
+
+#card-1, #card-3 {
+    width: 350px;
+    height: 450px;
+    margin-top: 45px;
+    font-size: 2rem;
+    padding: 25px;
+}
+
+#card-2 {
+    width: 400px;
+    height: 540px;
+    margin: 0 30px;
+    font-size: 2.3rem;
+    padding: 25px;
+}
+
+#passos-doacao img {
+    margin: auto;
+    display: block;
+}
+
+#card-1 img {
+    width: 180px;
+    margin-top: 40px;
+}
+
+#card-2 img {
+    width: 220px;
+}
+
+#card-2>p {
+    margin-bottom: 0;
+}
+
+#card-3 img {
+    width: 150px;
+}
+
 /* rodapé */
 footer div:first-child{
     background-image: url("../img/logo_fundo.png");
@@ -415,6 +490,29 @@ footer small{
         float: left;
         top: -60px;
         left: 0%;
+    }
+
+    #card-1, #card-2, #card-3 {
+        background-color: white;
+        border-radius: 10px;
+        width: 580px;
+        height: 390px;
+    } 
+    
+    #cards {
+        width: 580px;
+    }
+    #card-2 {
+        margin: 45px 0 0 0;
+        font-size: 2rem;
+    } 
+    #card-2 img {
+        width: 180px;
+        margin-top: 10px;
+    }
+    
+    #passos-doacao {
+        height: 1460px;
     }
 
 }
@@ -823,6 +921,17 @@ footer small{
 
     #b-3{
         top: -45px;
+    }
+
+    #card-1, #card-2, #card-3 {   
+        width: 300px;
+        height: 510px;
+    }
+    #cards {
+        width: 300px;
+    }
+    #passos-doacao {
+        height: 1880px;
     }
 }
 
