--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,9 +3,19 @@
     src: url(../font/GothamLight.ttf);
     src: url(../font/GothamBook.ttf);
 }
+/* ###modal-botao-sobre#### */
+.modal{
+    background-image: url(../img/IMG-20180726-WA0016.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.modal-body p{
+    text-align: justify;
+}
 .btn{
     background-color: #30394B
 }
+/* ############## */
 
 main{
     overflow: hidden;
@@ -57,6 +67,7 @@ nav img{
     width: 200px;
     text-align: center;
     color: white;
+    z-index: -1
 }
 
 #b-1{
@@ -98,6 +109,7 @@ nav img{
     height: 100%;
     margin: auto;
     padding: 25% 0;
+    z-index: +2
     
 }
 
@@ -126,9 +138,11 @@ nav img{
 .apresentacao-conteudo {
     overflow: hidden;
     padding-right: 50px;
+    
 }
 
 #boneco{
+    
     display: block;
     width: 355px;
     position: relative;
@@ -205,7 +219,7 @@ iframe{
     width: 600px;
     height: 400px;
     display: block;
-    border: #FF4040 solid 3px;
+    border: black solid 3px;
     border-radius: 10px;
 }
 
