--- a/css/estilo.css
+++ b/css/estilo.css
@@ -402,7 +402,7 @@ iframe{
     display: block;
     background-color: #30394b;
     overflow: hidden;
-    height: 800px;
+    height: 840px;
     clear: both;
 }
 
@@ -417,50 +417,56 @@ iframe{
     color: white;
     text-align: center;
 }
-.faixa{
-    height: 6px;
-    width: 140px;
-    margin:10px auto 10px auto;
-    display: block;
-    background-color:#FF4040;
-     
-}
-.gotas div{
-    display: block;
-    float:left;
-    overflow: hidden;
-}
-
-.gotas div:nth-child(2), .gotas div:nth-child(4){
-    padding: 0 41px;
-}
-.gotas div:nth-child(5){
-    padding-right: 41px;
-}
-.gotas div img{
-    width:153px; 
-}
-
 .gotas {
     overflow: hidden;
-    width:1230px;
+    width:1150px;
     margin:auto;
     margin-top:20px;
 }
-
-#curios{
-    display:block;
-    width:1079px;
-    background-color: white;
-    height: 350px;
-    border-radius: 8px;
-    padding:60px 0px 0px 40px;
-    float: left;
+.gotas div:not(:last-child){
+    float:left;
+    margin-right: 50px;
+}
+.gotas div:last-child{
+    float:right;
 }
 
-#curios p{
-    clear: both;
-    margin-top: 50px;
+.gota{
+    background-image: url("../img/GOTS.png ");
+    width:150px; 
+    height: 250px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+}
+.gota img{
+    display: block;
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    margin-top: 108px;
+    border: 2px solid white;
+    padding: 10px 0 10px 0;
+    border-radius: 35px;
+    padding: 3px;
+}
+.gotas img:hover{
+    width: 80px;
+    height: 80px;
+    transition: 100ms;  
+    margin-top: 103px;
+    border: 2px solid rgb(68, 25, 25);
+}
+.gotas img:active{
+    border: 7px solid rgb(68, 25, 25);   
+}
+
+#curios{
+    width: 1079px;
+    background-color: white;
+    height: 320px;
+    border-radius: 10px;
+    position: absolute;
 }
 #caixa-red {
     width: 500px;
@@ -469,18 +475,38 @@ iframe{
     border-radius: 8px;
     display: block;
     float: right;
-    margin-top: -171px;
-    margin-right: -56px;
-
+    position: relative;
+    margin-top: 31px;
+    background-image: url("../img/imagens/0001.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
 }
 #div_maior {
     overflow: hidden;
-    display: block;
     margin: auto;
-    width: 1139px;
+    width: 1150px;
     margin-top: 50px;
     height: 395px;
 }
+#curios-conteudo{
+    margin-top: 40px;
+    margin-left: 40px;
+    width: 570px;
+    height: 240px;
+}
+#faixa-conteudo{
+    height: 6px;
+    width: 140px;
+    background-color: #FF4040;
+    float: left;
+}
+#curios-p{
+    font-size: 23px;
+    font-weight: 300;
+    margin-top: 30px;
+}
+
 
 /* rodapé */
 footer div:first-child{
@@ -514,6 +540,10 @@ footer small{
 @media screen and (max-width:1200px){
     #boneco{
         display:none;  
+    }
+
+    .apresentacao{
+        border-bottom: 0;
     }
 
     .apresentacao p{
@@ -632,6 +662,55 @@ footer small{
         width:80px; 
     }
 
+    /*############VOCE SABIA############*/
+    #curios{
+        width:580px;
+        height: 669px;
+    }
+    #div_maior{
+        width: 580px;
+        height: 563px;
+    }
+    .vcsabia{
+        height: 1120px;
+    }
+    #caixa-red{
+        float: none;
+        margin: auto;
+        margin-top: 222px;
+        
+    }
+    #curios-conteudo{
+        width: 362px;
+        margin: auto;
+        margin-top: 40px;
+    }
+    #curios-p{
+        text-align: center;
+    }
+    #curios-conteudo h1{
+        text-align: center;
+    }
+    #faixa-conteudo {
+        float: none;
+        margin: auto;
+        
+    }
+    .gotas{
+        width: 580px;
+        height: 179px;
+    }
+    .gota {
+        width: 88px;
+    }
+
+    .gotas div:not(:last-child) {
+    
+        margin-right: 10px;
+    }
+    .gotas div {
+        padding: 0 0px;
+    }
 }
 
 @media screen and (max-width: 1192px) {
@@ -689,7 +768,7 @@ footer small{
     .play1{
         width: 500px;
         height: 300px;
-        background-color: #FF4040;
+        background-color:black;
         margin: auto;
         border-radius: 10px;
         display: block;
@@ -700,7 +779,7 @@ footer small{
         width: 100%;
         height: 100%;
         display: block;
-        border: #FF4040 solid 3px;
+        border: black solid 3px;
         border-radius: 10px;
         margin: auto
     }
@@ -1115,6 +1194,18 @@ footer small{
         font-weight: bolder
     }
 }
+
+@media screen and (max-width: 1020px){
+    .video-conteudo{
+        margin-left: 0;
+        width: 100%;
+    }
+    .video .central{
+        width: 100%;
+        margin: 0;
+    }
+}
+
 @media screen and (max-width: 700px){
     #quiz {
         width: 350px !important;
@@ -1960,6 +2051,35 @@ footer small{
 }
 @media screen and (max-width:600px){
 
+    .play1{
+        width: 98%;
+    }
+
+    #div_maior{
+        width: 98%;
+    }
+
+    #curios{
+        width: 97%;
+    }
+
+    .gotas{
+        width: 100%;
+        overflow: scroll;
+    }
+
+    #div-intermediaria-gotas{
+        width: 600px;
+    }
+    
+    .gotas div:last-child{
+        float: left;
+    }
+
+    #caixa-red{
+        width: 95%;
+    }
+
     nav img {
         width: 60%;
         padding-top: 3%;
@@ -2256,7 +2376,7 @@ footer small{
     .play1{
         width: 62%;
         height: 35%;
-        background-color: #FF4040;
+        background-color: black;
         margin: auto;
         border-radius: 10px;
         display: block;
@@ -2267,7 +2387,7 @@ footer small{
         width: 100%;
         height: 100%;
         display: block;
-        border: #FF4040 solid 3px;
+        border: black solid 3px;
         border-radius: 10px;
         margin: auto
     }
@@ -2284,5 +2404,11 @@ footer small{
         margin-left: 119px;
     }
 
+}
+
+@media screen and (max-width: 360px){
+    #curios-conteudo{
+        width: 100%;
+    }
 }
 
