Melhoria no css

--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ iframe {
 
 .quiz-footer a {
     margin-top: 2vh;
+    margin-right: 2vh;
     padding: 2vh;
     height: 4vh;
     color: white;
